# ai-text-editor

./: README.md  docker-compose-local.yml
backend/: .env-sample  .gitignore  Cargo.toml  Dockerfile
backend/src/: errors.rs  lib.rs  main.rs
backend/src/handlers/: health_handler.rs  mod.rs  transform_handler.rs
backend/src/models/: transformation.rs
backend/src/services/: openai_service.rs
backend/tests/: health_test.rs  openai_service_integration_test.rs  transform_endpoint.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: ActionButtons.test.tsx  ActionButtons.tsx  ParaphraseButton.tsx  ProposedChange.test.tsx  ProposedChange.tsx  TextEditor.test.tsx  TextEditor.tsx  TransformationSettings.test.tsx  TransformationSettings.tsx
frontend/tests/: setup.ts
