[package]
name = "ai-text-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.58"

[dev-dependencies]
mockito = "1.6.1"
serial_test = "2.0"

[lib]
name = "ai_text_editor_backend"
path = "src/lib.rs"

[[bin]]
name = "ai-text-editor-backend"
path = "src/main.rs"